# codestruct

./: .gitignore  README.md  pyproject.toml
codestruct/: __init__.py  code_structure.py
codestruct/xlsx_dependencies_template/: xlsx_dependencies.xlsx
tests/: code_structure_eval.py
tests/project/dir_a/: module1.py
tests/project/dir_a/dir_a2/: module3.py  module5.py
tests/project/dir_b/: module2.py  module4.py
tests/results/: dependencies_test.xlsx
