[tool.poetry]
name = "codestruct"
version = "0.1.0"
description = ""
authors = ["Giorgos <gm7.gavroleon@gmail.com>"]
readme = "README.md"
packages = [{include = "codestruct"}]

[tool.poetry.dependencies]
python = "^3.9"
xlwings = "^0.27.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
